--- a/src/components/common/SideBar/index.module.css
+++ b/src/components/common/SideBar/index.module.css
@@ -6,6 +6,7 @@
     height: 100vh;
     top: 0;
     width: 200px;
+    box-shadow: 2px 0 5px 1px #a9a6a64d;
 }
 
 
@@ -16,7 +17,7 @@
 
 .avatar{
     margin: auto;
-    margin-top: 25px;
+    margin-top: 10px;
 }
 
 .username{
@@ -27,7 +28,6 @@
 
 
 .menu{
-    margin-top: 40px;
     list-style: none;
 }
 
@@ -37,10 +37,53 @@
 
 .menu li{
     display: flex;
-    padding:15px;
+    padding:10px 15px;
 }
 
 .menu li span{
     margin-left: 10px;
     font-size: 20px;
+}
+
+.searchbar{
+    margin:15px 0px;
+}
+
+.footer{
+    margin: 10px 0px;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+}
+
+.settingsOption{
+    display: flex;
+}
+
+.settingsOption span{
+    margin-left: 3px;
+}
+
+/* Device = Most of the Smartphones Mobiles (Portrait) and Low Resolution tablets
+  Screen = B/w 320px to 767px
+*/ 
+
+@media (min-width: 320px) and (max-width: 767px) {
+    .container{
+        width: 100%;
+        overflow: scroll;
+        align-items: center;
+    }
+
+    .close-button{
+        align-self: end;
+    }
+
+    .menu{
+        display: flex;
+        flex-grow: 1;
+        flex-direction: column;
+        align-items: center;
+    }
+  
 }
