--- a/src/components/common/SideBar/index.module.css
+++ b/src/components/common/SideBar/index.module.css
@@ -11,8 +11,7 @@
 
 
 .close-button{
-    width:25px;
-    margin:10px;
+    display: none;
 }
 
 .avatar{
@@ -29,6 +28,9 @@
 
 .menu{
     list-style: none;
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
 }
 
 .menu-icon{
@@ -46,7 +48,7 @@
 }
 
 .searchbar{
-    margin:15px 0px;
+    display: none;
 }
 
 .footer{
@@ -73,10 +75,20 @@
         width: 100%;
         overflow: scroll;
         align-items: center;
+        z-index:2;
+        position: fixed;
+    }
+    
+    .searchbar{
+        display: flex;
+        margin:15px 0px;
     }
 
     .close-button{
         align-self: end;
+        display: flex;
+        width:25px;
+        margin:10px;
     }
 
     .menu{
