--- a/src/components/user/SignUpForm/index.module.css
+++ b/src/components/user/SignUpForm/index.module.css
@@ -13,6 +13,7 @@
 .form input{
     margin: 10px 0px;
     padding: 15px;
+    background-color: #f4f4f4;
 
 }
 
@@ -42,6 +43,7 @@
 .submit_button{
     flex:2
 }
+
 
 /* ##Device = Most of the Smartphones Mobiles (Portrait) and Low Resolution tablets
   ##Screen = B/w 320px to 767px
