--- a/src/components/common/NavBar/index.module.css
+++ b/src/components/common/NavBar/index.module.css
@@ -1,50 +1,46 @@
-.container{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 100%;
-    height: 60px;
-    background-color: cornflowerblue;
-    justify-content: space-between;
-    box-shadow: -1px 2px 3px 0px #80808085;
-    
+.container {
+  display: flex;
+  position: sticky;
+  top: 0px;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  height: 60px;
+  background-color: cornflowerblue;
+  justify-content: space-between;
+  box-shadow: -1px 2px 3px 0px #80808085;
 }
 
-
-.left-side{
-    flex:1;
+.left-side {
+  flex: 1;
 }
 
-.search-bar-container{
-    flex:3;
-    display: flex;
-    justify-content: center;
+.search-bar-container {
+  flex: 3;
+  display: flex;
+  justify-content: center;
 }
 
-
-.right-side{
-    display: flex;
-    flex:1;
-    margin-right: 10px;
+.right-side {
+  display: flex;
+  flex: 1;
+  margin-right: 10px;
 }
-
 
 /* Device = Most of the Smartphones Mobiles (Portrait) and Low Resolution tablets
   Screen = B/w 320px to 767px
-*/ 
+*/
 
 @media (min-width: 320px) and (max-width: 767px) {
-    .search-bar-container{
-       display: none;
-    }
+  .search-bar-container {
+    display: none;
+  }
 
-    .logo{
-        display: none;
-    }
-    
-    .right-side{
-        justify-content:flex-end
-    }
+  .logo {
+    display: none;
+  }
 
-  
+  .right-side {
+    justify-content: flex-end;
+  }
 }
