--- a/src/components/common/NavBar/index.module.css
+++ b/src/components/common/NavBar/index.module.css
@@ -31,7 +31,7 @@
   Screen = B/w 320px to 767px
 */
 
-@media (min-width: 320px) and (max-width: 767px) {
+@media (max-width: 767px) {
   .search-bar-container {
     display: none;
   }
