--- a/src/layouts/MainLayout/index.module.css
+++ b/src/layouts/MainLayout/index.module.css
@@ -1,48 +1,47 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    background-color: #E8E8E8;
-    min-height: 100vh;
+.container {
+  display: flex;
+  flex-direction: column;
+  background-color: #e8e8e8;
+  min-height: 100vh;
+  overflow-x: hidden;
 }
 
-.main-container{
-    display: flex;
+.main-container {
+  display: flex;
 }
 
-.sidebar{
-    display: flex;
-    flex:1;
-    flex-direction: column;
-    background: #fff;
-    min-height: calc(100vh - 60px);
-    width: 100%;
-    box-shadow: 2px 0 5px 1px #a9a6a64d;
+.sidebar {
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  background: #fff;
+  min-height: calc(100vh - 60px);
+  width: 100%;
+  box-shadow: 2px 0 5px 1px #a9a6a64d;
 }
 
 /* Side Bar Menu for desktop*/
 
-.sidebar ul{
-    margin-top: 50px;
-    margin-bottom: 50px;
-    justify-content: space-between;
+.sidebar ul {
+  margin-top: 50px;
+  margin-bottom: 50px;
+  justify-content: space-between;
 }
 
-.content{
-    flex:3;
+.content {
+  flex: 3;
 }
 
-.right-side-bar{
-    flex: 1;
+.right-side-bar {
+  flex: 1;
 }
-  
 
+@media (max-width: 767px) {
+  .sidebar {
+    display: none;
+  }
 
-@media (min-width: 320px) and (max-width: 767px) {
-    .sidebar{
-        display: none;
-    }
-
-    .main-container{
-        flex-direction: column;
-    }
+  .main-container {
+    flex-direction: column;
+  }
 }
