--- a/src/components/common/MenuButton/index.module.css
+++ b/src/components/common/MenuButton/index.module.css
@@ -1,14 +1,10 @@
-.menu-button{
-    display: none;
+.menu-button {
+  display: none;
 }
 
-
-
-@media (min-width: 320px) and (max-width: 767px) {
-
-    .menu-button{
-        margin-left: 10px;
-        display: flex;
-    }
-
+@media (max-width: 768px) {
+  .menu-button {
+    margin-left: 10px;
+    display: flex;
+  }
 }
