--- a/src/components/common/SideBar/index.module.css
+++ b/src/components/common/SideBar/index.module.css
@@ -1,101 +1,98 @@
-.container{
-    display: flex;
-    flex-direction: column;
-    background: #fff;
-    position: absolute;
-    height: 100vh;
-    top: 0;
-    width: 200px;
-    box-shadow: 2px 0 5px 1px #a9a6a64d;
+.container {
+  display: flex;
+  flex-direction: column;
+  background: #fff;
+  position: absolute;
+  height: 100vh;
+  top: 0;
+  width: 200px;
+  box-shadow: 2px 0 5px 1px #a9a6a64d;
 }
 
-
-.close-button{
-    display: none;
+.close-button {
+  display: none;
 }
 
-.avatar{
-    margin: auto;
-    margin-top: 10px;
+.avatar {
+  margin: auto;
+  margin-top: 10px;
 }
 
-.username{
-    text-align: center;
-    font-size: large;
-    color: #5d5d5d;
+.username {
+  text-align: center;
+  font-size: large;
+  color: #5d5d5d;
 }
 
-
-.menu{
-    list-style: none;
-    display: flex;
-    flex-grow: 1;
-    flex-direction: column;
+.menu {
+  list-style: none;
+  display: flex;
+  flex-grow: 1;
+  flex-direction: column;
 }
 
-.menu-icon{
-    width:20px;
+.menu-icon {
+  width: 20px;
 }
 
-.menu li{
-    display: flex;
-    padding:10px 15px;
+.menu li {
+  display: flex;
+  padding: 10px 15px;
 }
 
-.menu li span{
-    margin-left: 10px;
-    font-size: 20px;
+.menu li span {
+  margin-left: 10px;
+  font-size: 20px;
 }
 
-.searchbar{
-    display: none;
+.searchbar {
+  display: none;
 }
 
-.footer{
-    margin: 10px 0px;
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
+.footer {
+  margin: 10px 0px;
+  display: flex;
+  width: 100%;
+  justify-content: space-around;
 }
 
-.settingsOption{
-    display: flex;
+.settingsOption {
+  display: flex;
 }
 
-.settingsOption span{
-    margin-left: 3px;
+.settingsOption span {
+  margin-left: 3px;
 }
 
 /* Device = Most of the Smartphones Mobiles (Portrait) and Low Resolution tablets
   Screen = B/w 320px to 767px
-*/ 
+*/
 
-@media (min-width: 320px) and (max-width: 767px) {
-    .container{
-        width: 100%;
-        overflow: scroll;
-        align-items: center;
-        z-index:2;
-        position: fixed;
-    }
-    
-    .searchbar{
-        display: flex;
-        margin:15px 0px;
-    }
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    overflow: scroll;
+    align-items: center;
+    z-index: 2;
+    position: fixed;
+  }
 
-    .close-button{
-        align-self: end;
-        display: flex;
-        width:25px;
-        margin:10px;
-    }
+  .searchbar {
+    display: flex;
+    margin: 15px 0px;
+  }
 
-    .menu{
-        display: flex;
-        flex-grow: 1;
-        flex-direction: column;
-        align-items: center;
-    }
-  
+  .close-button {
+    align-self: end;
+    display: flex;
+    width: 25px;
+    margin: 10px;
+  }
+
+  .menu {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    align-items: center;
+  }
 }
