--- a/src/pages/SettingPage/index.module.css
+++ b/src/pages/SettingPage/index.module.css
@@ -1,13 +1,11 @@
-
-
-.container{
-    width: 90%;
-    margin: auto;
+.container {
+  width: 90%;
+  margin: auto;
+  min-height: calc(100vh - 40px);
 }
 
-
-@media  (max-width: 767px) {
-    .container{
-        width:100% ;
-    }
+@media (max-width: 767px) {
+  .container {
+    width: 100%;
+  }
 }
