--- a/src/layouts/MainLayout/index.module.css
+++ b/src/layouts/MainLayout/index.module.css
@@ -2,11 +2,13 @@
   display: flex;
   flex-direction: column;
   background-color: #e8e8e8;
-  min-height: 100vh;
+  height: 100vh;
 }
 
 .main-container {
   display: flex;
+  height: calc(100vh - 60px);
+  overflow-y: scroll;
 }
 
 .sidebar {
@@ -17,6 +19,8 @@
   min-height: calc(100vh - 60px);
   width: 100%;
   box-shadow: 2px 0 5px 1px #a9a6a64d;
+  position: sticky;
+  top: 0px;
 }
 
 /* Side Bar Menu for desktop*/
