--- a/src/pages/SettingPage/SchoolSettings/index.module.css
+++ b/src/pages/SettingPage/SchoolSettings/index.module.css
@@ -30,3 +30,10 @@
   display: flex;
   flex-direction: column;
 }
+
+.addSchoolCallToAction {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
