--- a/src/layouts/MainLayout/index.module.css
+++ b/src/layouts/MainLayout/index.module.css
@@ -2,13 +2,11 @@
   display: flex;
   flex-direction: column;
   background-color: #e8e8e8;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .main-container {
   display: flex;
-  height: calc(100vh - 60px);
-  overflow-y: scroll;
 }
 
 .sidebar {
@@ -16,11 +14,11 @@
   flex: 1;
   flex-direction: column;
   background: #fff;
-  min-height: calc(100vh - 60px);
+  height: calc(100vh - 60px);
   width: 100%;
   box-shadow: 2px 0 5px 1px #a9a6a64d;
   position: sticky;
-  top: 0px;
+  top: 60px;
 }
 
 /* Side Bar Menu for desktop*/
