--- a/src/components/common/NavBar/index.module.css
+++ b/src/components/common/NavBar/index.module.css
@@ -9,6 +9,7 @@
   background-color: cornflowerblue;
   justify-content: space-between;
   box-shadow: -1px 2px 3px 0px #80808085;
+  z-index: 2;
 }
 
 .left-side {
