--- a/src/layouts/MainLayout/index.module.css
+++ b/src/layouts/MainLayout/index.module.css
@@ -2,11 +2,12 @@
   display: flex;
   flex-direction: column;
   background-color: #e8e8e8;
-  min-height: 100vh;
+  min-height: calc(100vh - 60px);
 }
 
 .main-container {
   display: flex;
+  min-height: calc(100vh - 60px);
 }
 
 .sidebar {
@@ -31,6 +32,7 @@
 
 .content {
   flex: 3;
+  min-height: calc(100vh - 60px);
 }
 
 .right-side-bar {
@@ -44,5 +46,9 @@
 
   .main-container {
     flex-direction: column;
+  }
+
+  .right-side-bar {
+    display: none;
   }
 }
