--- a/src/pages/ProfilePage/GiftSection/index.module.css
+++ b/src/pages/ProfilePage/GiftSection/index.module.css
@@ -3,3 +3,12 @@
   flex-wrap: wrap;
   justify-content: center;
 }
+
+.nothingFound {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin: auto;
+}
